force-app/main/default/objects/Taxonomy_Run__c/Taxonomy_Run__c.object-meta.xml
<CustomObject>
    <description>The Taxo run object will be populated with New Taxo Data for any of the record types that become available in Taxonomy__c. The Taxo Run Control Batch will run daily and identify if new Taxo data has been received for any of the Taxo Record Types and insert in this object.</description>
    <label>Taxonomy Run</label>
    <nameField>
        <displayFormat>TX-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taxonomy Run</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>