force-app/main/default/objects/Taxonomy_Run__c/fields/Deleted_On__c.field-meta.xml
<CustomField>
    <fullName>Deleted_On__c</fullName>
    <description>This will be populated with the value of NULL when the Entry is made. When the Status of the Record is changed to Deleted, the Current Date will be populated as the Deleted On.</description>
    <label>Deleted On</label>
    <type>DateTime</type>
</CustomField>