force-app/main/default/objects/Taxonomy_Run__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This will be a combination of the Taxo Record Type and Future Version Number. Format &lt;Taxo Record Type&gt;_&lt;Future_Version_No&gt;.</description>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>