force-app/main/default/objects/Taxonomy_Run__c/fields/Future_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Future_Version_Number__c</fullName>
    <description>Version number of the Future Taxo for the Taxo Record type as received in Taxonomy__c.</description>
    <label>Future Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>