force-app/main/default/objects/Taxonomy_Run__c/fields/Processing_End__c.field-meta.xml
<CustomField>
    <fullName>Processing_End__c</fullName>
    <description>This will be populated with the value of NULL when the entry is made. When the Status of the Record is changed to Completed, the Current DateTime will be populated as the Processing End.</description>
    <label>Processing End</label>
    <type>DateTime</type>
</CustomField>