force-app/main/default/objects/Taxonomy_Run__c/fields/Processing_Start__c.field-meta.xml
<CustomField>
    <fullName>Processing_Start__c</fullName>
    <description>This will be populated with the value of NULL when the entry is made. When the Status of the Record is changed to Processing, the Current DateTime will be populated as the Processing Start.</description>
    <label>Processing Start</label>
    <type>DateTime</type>
</CustomField>