force-app/main/default/objects/Taxonomy_Run__c/fields/Received_On__c.field-meta.xml
<CustomField>
    <fullName>Received_On__c</fullName>
    <description>This will be the date when the Taxo Run Control Batch determines that new taxo data has been received for this Taxo Record Type and makes the Record Entry.</description>
    <label>Received On</label>
    <type>Date</type>
</CustomField>