force-app/main/default/objects/Taxonomy_Run__c/fields/Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Date__c</fullName>
    <description>Run Date will be calculated by the Taxo Run Control Batch when inserting data in this object. The Run Date will be calculated as the date of the first Saturday of the next month for all situations, except if the current date is the first of the month. In the later case, it will be set as the current date.</description>
    <label>Run Date</label>
    <type>Date</type>
</CustomField>