force-app/main/default/objects/Taxonomy_Run__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Execution Sequence Number as defined in the Taxo Run Metadata for the specific Record Type.</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>