force-app/main/default/objects/Taxonomy_Run__c/fields/Taxo_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Taxo_Record_Type__c</fullName>
    <description>Taxo Record Type Name for which Taxo Data has been received.</description>
    <label>Taxo Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>