force-app/main/default/objects/Taxonomy_Run__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sequence__c</columns>
    <columns>Run_Date__c</columns>
    <columns>Taxo_Record_Type__c</columns>
    <columns>Future_Version_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Processing_Start__c</columns>
    <columns>Processing_End__c</columns>
    <columns>Deleted_On__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>