force-app/main/default/objects/Taxonomy_Run__c/listViews/Pending_Taxonomy_Records.listView-meta.xml
<ListView>
    <fullName>Pending_Taxonomy_Records</fullName>
    <columns>NAME</columns>
    <columns>External_Id__c</columns>
    <columns>Future_Version_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Run_Date__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Taxonomy Records</label>
</ListView>