force-app/main/default/objects/Taxonomy_Run__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Sequence__c</columns>
    <columns>Run_Date__c</columns>
    <columns>Taxo_Record_Type__c</columns>
    <columns>Future_Version_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Processing_Start__c</columns>
    <columns>Processing_End__c</columns>
    <columns>Deleted_On__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>